fix: mobile layout issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -462,11 +462,6 @@ h6 {
   #hero {
     height: 45vh !important;
   }
-
-  .post-hero {
-    padding-top: 4rem !important;
-    padding-bottom: 1rem !important; 
-  }
 }
 
 @media (min-width: 768px) {
@@ -625,8 +620,8 @@ section {
 
 .post-hero {
   display: flex;
-  padding-top: 8rem;
-  padding-bottom: 4rem;
+  padding-top: 4rem;
+  padding-bottom: 2rem;
   flex-direction: column;
   gap: 1rem;
   background-color: #FEE44B;
@@ -648,6 +643,11 @@ section {
 }
 
 @media (max-width: 768px) {
+  .post-hero {
+    padding-top: 3rem !important;
+    padding-bottom: 1rem !important; 
+  }
+
   .post-hero-quote {
     font-size: 30px;
     font-weight: 600;
@@ -725,7 +725,8 @@ section {
 /* About Us Section
 --------------------------------*/
 #about {
-  padding: 60px 0;
+  padding-top: 40px;
+  padding-bottom: 0px;
   overflow: hidden;
 }
 
@@ -740,6 +741,11 @@ section {
 }
 
 @media (max-width: 768px) {
+  #about {
+    padding-top: 25px;
+    padding-bottom: 50px;
+  }
+
   #about .about-img {
     height: auto;
   }
@@ -799,24 +805,27 @@ section {
 
 @media (width < 500px) {
   #features {
-    display: none !important;
+    background: linear-gradient(rgba(255, 217, 0, 0), rgba(255, 237, 101, 0)), url("../img/info1.png");
+    background-size: contain;
+    background-position: center;
   }
 
-  .features-section {
-    display: none !important;
+  #features .wrapper-info {
+    width: auto;
+    height: 130px;
   }
 }
 
 @media (width > 500px) {
   #features {
-    background: linear-gradient(rgba(255, 217, 0, 0.0), rgba(255, 237, 101, 0.0)), url("../img/info1.png") fixed center center;
+    background: linear-gradient(rgba(255, 217, 0, 0), rgba(255, 237, 101, 0)), url("../img/info1.png") fixed center center;
     overflow: hidden;
   }
-}
 
-#features .wrapper-info {
-  width: auto;
-  height: 420px;
+  #features .wrapper-info {
+    width: auto;
+    height: 320px;
+  }
 }
 
 #features .features-img img {
@@ -867,25 +876,23 @@ section {
 }
 
 @media (width < 500px) {
-  .features-footer-img {
-    display: none;
-  }
+  #features-footer {
+    background: linear-gradient(rgba(255, 217, 0, 0), rgba(255, 237, 101, 0)), url("../img/info6-mobile.png");
+    background-size: cover;                  
+    background-repeat: no-repeat;  
+    padding: 60px 0 0 0;
+    overflow: hidden;
+  }  
 }
 
 @media (width > 500px) {
   #features-footer {
-    width: 100%;
-    height: 650px;
-  }
-  
-  .features-footer-img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-  }
+    background: linear-gradient(rgba(255, 217, 0, 0), rgba(255, 237, 101, 0)), url("../img/info6.png");
+    background-size: cover;                  
+    background-repeat: no-repeat;  
+    padding: 60px 0 0 0;
+    overflow: hidden;
+  }  
 }
 
 #features-footer .wrapper-info {
@@ -918,7 +925,8 @@ section {
 }
 
 #advanced-features p {
-  line-height: 24px;
+  font-size: 20px;
+  /* line-height: 24px; */
   color: #777;
   margin-bottom: 30px;
 }
@@ -953,6 +961,9 @@ section {
 }
 
 @media (max-width: 768px) {
+  #advanced-features p {
+    font-size: 16px;
+  }
 
   #advanced-features .advanced-feature-img-right,
   #advanced-features .advanced-feature-img-left {
